recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:16: error: not found: value square
	square()
        ^