recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
	def square(p:Double,a:Double)={
		val p = 100
		val a = 90
		for (i<- 1 to 4) {
			avance(p);
			droite(a);
		}
		droite(a);
		avance(p);
		droite(a);
	}
}
for (i<-1 to 4) {
	square()
}
